@@ -3,12 +3,15 @@ package com.shaft.performance.internal;
 import com.shaft.cli.FileActions;
 import com.shaft.cli.TerminalActions;
 import com.shaft.driver.SHAFT;
+import com.shaft.tools.io.ReportManager;
+import com.shaft.tools.io.internal.ReportManagerHelper;
 import org.apache.commons.lang3.SystemUtils;
 import org.openqa.selenium.WebDriver;
 
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.text.SimpleDateFormat;
+import java.util.Arrays;
 import java.util.List;
 
 public class LightHouseGenerateReport {
@@ -30,16 +33,17 @@ public class LightHouseGenerateReport {
 
             if (SystemUtils.IS_OS_WINDOWS) {
                 commandToGenerateLightHouseReport = ("cmd.exe /c node GenerateLHScript.js --url=\"" + driver.getCurrentUrl() + "\" --port=" + PortNum + " --reportName=" + PageName + " ");
+                commandToGenerateLightHouseReport = commandToGenerateLightHouseReport.replace("&", "N898");
             } else {
                 commandToGenerateLightHouseReport = ("node GenerateLHScript.js --url=\"" + driver.getCurrentUrl() + "\" --port=" + PortNum + " --reportName=" + PageName + " ");
+                commandToGenerateLightHouseReport = commandToGenerateLightHouseReport.replace("&", "N898");
             }
-            commandToGenerateLightHouseReport = commandToGenerateLightHouseReport.replace("&", "N898");
             //TerminalActions.getInstance(true, true).performTerminalCommand(commandToGenerateLightHouseReport);
             (new TerminalActions()).performTerminalCommand(commandToGenerateLightHouseReport);
             writeReportPathToFilesInProjectDirectory(PageName);
-            openLighthouseReportWhileExecution();
+             openLighthouseReportWhileExecution();
             SHAFT.Report.report("Lighthouse Report Generated successfully");
-            SHAFT.Report.attach("LightHouse HTML", "Report", FileActions.getInstance().readFile("lighthouse-reports/" + PageName + ".html"));
+            SHAFT.Report.attach("LightHouse HTML", "Report",  FileActions.getInstance().readFile("lighthouse-reports/"+PageName+".html"));
         }
     }
 
@@ -63,61 +67,52 @@ public class LightHouseGenerateReport {
 
     public void writeReportPathToFilesInProjectDirectory(String pageName) {
     List<String> commandsToServeLHReport;
-        commandsToServeLHReport = List.of(
+        commandsToServeLHReport = Arrays.asList(
                 "import open from 'open';\n" +
-                        "import path from 'path';\n" +
-                        "const __dirname = path.resolve();\n" +
-                        "await open(__dirname +'/lighthouse-reports/" + pageName + ".html');\n");
+                "import path from 'path';\n" +
+                "const __dirname = path.resolve();\n" +
+                "await open(__dirname +'/lighthouse-reports/"+pageName+".html');\n" +
+                "");
         FileActions.getInstance().writeToFile("", "OpenLHReport.js", commandsToServeLHReport);
     }
 
     public void writeNodeScriptFileInProjectDirectory() {
         List<String> commandsToServeLHReport;
         if (SystemUtils.IS_OS_WINDOWS) {
-            commandsToServeLHReport = List.of("""
-                    import puppeteer from 'puppeteer';
-                    import fs from 'fs';
-                    import lighthouse from 'lighthouse';
-                    import optimist from 'optimist';
-                    var argv =optimist.argv;
-                    import open from 'open';
-                    import path from 'path';
-                    const __dirname = path.resolve();
-                    import desktopConfig from 'lighthouse/core/config/desktop-config.js';
-                    // -------- Configs ----------
-                    var text = argv.url;
-                    var Url = text.replaceAll("N898", "&");
-                    //Url=Url.replace("'&'", "&");
-                    var Port = argv.port;
-                    var LogLevel='info';
-                    var OutputType='html'; // html , json
-                    var ReportName=argv.reportName;
-
-                    //----------------------------
-
-                    (async() => {
-
-                    // Use Puppeteer to connect to the opened session by port
-                       const browserURL = 'http://127.0.0.1:'+Port;
-                       const browser = await puppeteer.connect({browserURL});
-                       \s
-                    // Lighthouse connect to the opened page and genrate the report.
-                      const options = {logLevel:LogLevel ,output: OutputType, port:Port};
-                      const runnerResult = await lighthouse(Url,options,desktopConfig);
-
-                        // `Genrate the report output as HTML or JSON
-                      const reportHtml = runnerResult.report;
-                        // save the report in node.js path
-                        fs.writeFileSync(__dirname +'/lighthouse-reports/'+ReportName+'.'+OutputType, reportHtml);
-                        // Disconnect from the session
-                        await browser.disconnect();
-                    //    await open(__dirname +'/lighthouse-reports/'+ReportName+'.'+OutputType);
-
-                    })();
-                    """);
-        }
+        commandsToServeLHReport = Arrays.asList("""
+                import puppeteer from 'puppeteer';
+                import fs from 'fs';
+                import lighthouse from 'lighthouse';
+                import optimist from 'optimist';
+                var argv =optimist.argv;
+                import open from 'open';
+                import path from 'path';
+                const __dirname = path.resolve();
+                 import desktopConfig from 'lighthouse/core/config/desktop-config.js';
+                // -------- Configs ----------
+                  var text = argv.url;
+                  var Url = text.replaceAll("N898", "&");
+                  var Port = argv.port;
+                  var LogLevel='info';
+                  var OutputType='html'; // html , json
+                  var ReportName=argv.reportName;
+                //----------------------------
+                (async() => {
+                  // Use Puppeteer to connect to the opened session by port
+                  const browserURL = 'http://127.0.0.1:'+Port;
+                  const browser = await puppeteer.connect({browserURL});
+                  // Lighthouse connect to the opened page and generate the report.
+                  const options = {logLevel:LogLevel ,output: OutputType, port:Port};
+                  const runnerResult = await lighthouse(Url,options,desktopConfig);
+                  // `Genrate the report output as HTML or JSON
+                  const reportHtml = runnerResult.report;
+                  // save the report in node.js path
+                  fs.writeFileSync(__dirname +'/lighthouse-reports/'+ReportName+'.'+OutputType, reportHtml);
+                  // Disconnect from the session
+                  await browser.disconnect();
+                })();"""); }
         else {
-            commandsToServeLHReport = List.of("""
+            commandsToServeLHReport = Arrays.asList("""
                     import puppeteer from 'puppeteer';
                     import fs from 'fs';
                     import lighthouse from 'lighthouse';
@@ -128,36 +123,30 @@ public class LightHouseGenerateReport {
                     const __dirname = path.resolve();
                     import desktopConfig from 'lighthouse/lighthouse-core/config/desktop-config.js';
                     // -------- Configs ----------
-                    var text = argv.url;
-                    var Url = text.replaceAll("N898", "&");
-                    //Url=Url.replace("'&'", "&");
-                    var Port = argv.port;
-                    var LogLevel='info';
-                    var OutputType='html'; argv.outputType; // html , json
-                    var ReportName=argv.reportName;
-
+                       var text = argv.url;
+                       var Url = text.replaceAll( "N898 ",  "& ");
+                       //Url=Url.replace( "'&' ",  "& ");
+                       var Port = argv.port;
+                       var LogLevel='info';
+                       var OutputType='html'; argv.outputType; // html , json
+                       var ReportName=argv.reportName;
                     //----------------------------
-
                     (async() => {
-
-                    // Use Puppeteer to connect to the opened session by port
+                       // Use Puppeteer to connect to the opened session by port
                        const browserURL = 'http://127.0.0.1:'+Port;
                        const browser = await puppeteer.connect({browserURL});
-                       \s
-                    // Lighthouse connect to the opened page and genrate the report.
-                      const options = {logLevel:LogLevel ,output: OutputType, port:Port};
-                      const runnerResult = await lighthouse(Url,options,desktopConfig);
-
-                        // `Genrate the report output as HTML or JSON
-                      const reportHtml = runnerResult.report;
-                        // save the report in node.js path
-                        fs.writeFileSync(__dirname +'/lighthouse-reports/'+ReportName+'.'+OutputType, reportHtml);
-                        // Disconnect from the session
-                        await browser.disconnect();
-                    //    await open(__dirname +'/lighthouse-reports/'+ReportName+'.'+OutputType);
-
-                    })();
-                    """);
+                       // open new tab to Fix Lighthouse issue in MacOS as it run on same tab
+                       const newTab = browser.newPage(browserURL);
+                       //Lighthouse connect to the opened page and generate the report.
+                       const options = {logLevel:LogLevel ,output: OutputType, port:Port};
+                       const runnerResult = await lighthouse(Url,options,desktopConfig);
+                       // `Genrate the report output as HTML or JSON
+                       const reportHtml = runnerResult.report;
+                       // save the report in node.js path
+                       fs.writeFileSync(__dirname +'/lighthouse-reports/'+ReportName+'.'+OutputType, reportHtml);
+                       // Disconnect from the session
+                       await browser.disconnect();
+                     })();""");
         }
         FileActions.getInstance().writeToFile("", "GenerateLHScript.js", commandsToServeLHReport);
     }
